fix maxlength html attribute for mobile, and product name overlap:   - added a function for onkeypress for both inputs, to set maxlength using javascript, otherwise maxlength was ignored on mobile phones   - added overflow for list to prevent product name overlapping over price floating element

--- a/shopping-list/index.css
+++ b/shopping-list/index.css
@@ -59,6 +59,7 @@ ul#products-list {
     position: relative;
     max-height: 250px;
     visibility: visible;
+    overflow: auto;
 }
 
 li {
